# infraveritas-energy

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  WHITEPAPER.md  dashboard.html
.github/workflows/: ci.yml
aggregator/: .dockerignore  .env.example  Dockerfile  _first_run.md  docker-compose.yml  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
aggregator/circuits/: v08.json
aggregator/legacy/: README.md
aggregator/scripts/: a333_refactor.py  generate-abi.ts  generate_prover_v06.py  test_payload_signed.sh  test_readings_hash.js
aggregator/src/: db.ts  main.ts  prover.ts  types.ts  verify.ts
audit/: slither_v2_baseline.md  slither_v2_baseline.txt
audit/echidna/: covered.1778942472.lcov  covered.1779005158.lcov  echidna-24h-coverage.html  echidna-24h-coverage.txt
audit/mythril/: DeviceRegistry.md  (+1 more)
contracts/: echidna.config.yaml  foundry.toml  slither.config.README.md  slither.config.json
deployments/: sepolia-mvp-2026-05.json
docs/: deployment.md  sepolia_deployment_checklist.md
edge/: .gitignore  edge_device.py  pyproject.toml
edge/hal/: __init__.py  canonical.py  edge_device.py  eip712.py  ina226.py  mock_edge_device.py  poseidon.py  signing.py  signing_atecc.py
edge/legacy/: README.md
edge/network/: __init__.py  client.py
edge/scripts/: sepolia_smoke.py  sepolia_smoke_chip.py
edge/tests/: test_aggregator_client.py  test_mock_edge_device.py  test_poseidon_sponge.py
infra/: docker-compose.phase4.yml
subgraph/: .gitignore  package-lock.json  package.json  schema.graphql  subgraph.yaml
(+126 files in other folders)
